--- a/cart.html
+++ b/cart.html
@@ -52,8 +52,8 @@
           <li class="dropdown"><a href="category.html"><span>Kategori</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="category/fiction.html">Fiksi</a></li>
-              <li><a href="category/nonfiction.html">Non-Fiksi</a></li>
+              <li><a href="category-fiction.html">Fiksi</a></li>
+              <li><a href="category-nonfiction.html">Non-Fiksi</a></li>
             </ul>
           </li>
           <li><a href="aboutus.html">Tentang Kami</a></li>
