--- a/category-fiction.html
+++ b/category-fiction.html
@@ -134,28 +134,28 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/alice.png" class="card-img-top" alt="..."></a>
+                                <a href="books/alice.html"><img src="assets/img/menu/alice.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Lewis Carrol</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Alice’s Adventures in Wonderland </a></h5>
+                                    <h5 class="card-title"><a href="books/alice.html">Alice’s Adventures in Wonderland </a></h5>
                                     <p class="card-text fs-4"><b>Rp. 60.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/alice.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/ayahku.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/ayahku.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Tere Liye</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Ayahku Bukan Pembohong</a></h5>
+                                    <h5 class="card-title"><a style="color:#CE1212">Ayahku Bukan Pembohong</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 55.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -166,33 +166,33 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/dearnathan.png" class="card-img-top" alt="..."></a>
+                                <a href="books/dearnathan.html"><img src="assets/img/menu/dearnathan.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Erisca Febriani</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Dear Nathan</a></h5><br>
+                                    <h5 class="card-title"><a href="books/dearnathan.html">Dear Nathan</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/dearnathan.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/enola1.png" class="card-img-top" alt="..."></a>
+                                <a href="books/enola1.html"><img src="assets/img/menu/enola1.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Nancy Springer</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Enola Holmes</a></h5><br>
+                                    <h5 class="card-title"><a href="books/enola1.html">Enola Holmes</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/enola1.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
@@ -203,45 +203,45 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/kata.png" class="card-img-top" alt="..."></a>
+                                <a href="books/kata.html"><img src="assets/img/menu/kata.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Rintik Sedu</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Kata</a></h5><br>
+                                    <h5 class="card-title"><a href="books/kata.html">Kata</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/kata.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/littlewoman.png" class="card-img-top"
+                                <a href="books/littlewoman.html"><img src="assets/img/menu/littlewoman.png" class="card-img-top"
                                         alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Lousa May Alcott</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Little Women & Good Wives</a></h5>
+                                    <h5 class="card-title"><a href="books/littlewoman.html">Little Women & Good Wives</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/littlewoman.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/mariposa.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/mariposa.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Luluk HF</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Mariposa</a></h5><br>
+                                    <h5 class="card-title"><a style="color:#CE1212">Mariposa</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -252,12 +252,12 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/teluk.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/teluk.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Eka Aryani</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Teluk Alaska</a></h5><br>
+                                    <h5 class="card-title"><a style="color:#CE1212">Teluk Alaska</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -273,12 +273,12 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/tenggelam.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/tenggelam.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Hamka</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Tenggelamnya Kapal Van Der Wijck</a></h5>
+                                    <h5 class="card-title"><a style="color:#CE1212">Tenggelamnya Kapal Van Der Wijck</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 85.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -289,12 +289,12 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/tentang.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/tentang.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Tere Liye</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Tentang Kamu</a></h5>
+                                    <h5 class="card-title"><a style="color:#CE1212">Tentang Kamu</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
