--- a/category-nonfiction.html
+++ b/category-nonfiction.html
@@ -135,45 +135,45 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/atomic1.png" class="card-img-top" alt="..."></a>
+                                <a href="books/atomic1.html"><img src="assets/img/menu/atomic1.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">James Clear</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Atomic Habits</a></h5><br>
+                                    <h5 class="card-title"><a href="books/atomic1.html">Atomic Habits</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/atomic1.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/deartommorow.png" class="card-img-top"
+                                <a href="books/deartomorrow.html"><img src="assets/img/menu/deartommorow.png" class="card-img-top"
                                         alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Maudy Ayunda</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Dear Tomorrow </a></h5><br>
+                                    <h5 class="card-title"><a href="books/deartomorrow.html">Dear Tomorrow </a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/deartomorrow.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/habisgelap.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/habisgelap.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">R.A. Kartini</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Habis Gelap Terbtlah Terang</a></h5>
+                                    <h5 class="card-title"><a style="color:#CE1212">Habis Gelap Terbtlah Terang</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -184,18 +184,18 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/howtorespect.png" class="card-img-top"
+                                <a href="books/howtorespect.html"><img src="assets/img/menu/howtorespect.png" class="card-img-top"
                                         alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Yoon Hong Gyun</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">How To Respect Myself</a></h5>
+                                    <h5 class="card-title"><a href="books/howtorespect.html">How To Respect Myself</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/howtorespect.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
@@ -206,29 +206,29 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/howtowin.png" class="card-img-top" alt="..."></a>
+                                <a href="books/howtowin.html"><img src="assets/img/menu/howtowin.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Dale Carnegie</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">How To Win Friends & Influence People</a></h5>
+                                    <h5 class="card-title"><a href="books/howtowin.html">How To Win Friends & Influence People</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/howtowin.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/jikakitatak.png" class="card-img-top"
+                                <a><img src="assets/img/menu/jikakitatak.png" class="card-img-top"
                                         alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Alvi Syahrin</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Jika Kita Tak Pernah Jadi Apa-apa</a></h5>
+                                    <h5 class="card-title"><a style="color:#CE1212">Jika Kita Tak Pernah Jadi Apa-apa</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 65.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -239,28 +239,28 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/limitless.png" class="card-img-top" alt="..."></a>
+                                <a href="books/limitless.html"><img src="assets/img/menu/limitless.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Nadhira Afifa</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Limitless</a></h5><br>
+                                    <h5 class="card-title"><a href="books/limitless.html">Limitless</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/limitless.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/mahatma.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/mahatma.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">M.K. Gandhi</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Mahatma Gandhi</a></h5><br>
+                                    <h5 class="card-title"><a style="color:#CE1212">Mahatma Gandhi</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -276,12 +276,12 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/mhatta.png" class="card-img-top" alt="..."></a>
+                                <a><img src="assets/img/menu/mhatta.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Salman Alfarizi</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Mohammad Hatta</a></h5><br>
+                                    <h5 class="card-title"><a style="color:#CE1212">Mohammad Hatta</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
@@ -292,17 +292,17 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-sm">
-                                <a href=""><img src="assets/img/menu/sukarno.png" class="card-img-top" alt="..."></a>
+                                <a href="books/sukarno.html"><img src="assets/img/menu/sukarno.png" class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <small>
                                         <p class="text-muted">Anom Whani Wicaksana</p>
                                     </small>
-                                    <h5 class="card-title"><a href="#">Sukarno</a></h5><br>
+                                    <h5 class="card-title"><a href="books/sukarno.html">Sukarno</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
                                     <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
+                                    <a href="books/sukarno.html"><button type="button" class="btn btn-outline-danger rounded-pill">Detail</button></a>
                                 </div>
                             </div>
                         </div>
