--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">Enola Holmes & Black Barouche</h4>
                 <p class="description" style="text-align:center">
-                  <i>Enola Holmes adalah adik perempuan dari saudara laki-lakinya yang lebih terkenal ...</i> <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <i>Enola Holmes adalah adik perempuan dari saudara laki-lakinya yang lebih terkenal ...</i> <br><small><a href="books/enola1.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp.80.000,-
@@ -174,7 +174,7 @@
                 <h4 style="text-align:center">Alice Adventures in Wonderland</h4>
                 <p class="description" style="text-align:center">
                   <i>Alice's Adventures in Wonderland adalah sebuah novel Inggris tahun 1865 oleh Lewis
-                    Carroll.</i><br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                    Carroll.</i><br><small><a href="books/alice.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp. 60.000,-
@@ -187,7 +187,7 @@
                 <h4 style="text-align:center">Dear Nathan</h4>
                 <p class="description" style="text-align:center">
                   <i>Berawal dari terlambat menghadiri upacara pertama di sekolah baru, Salma Alvira <a
-                      class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
+                      class="text-muted">...</a></i> <br><small><a href="books/dearnathan.html" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
                 </p>
                 <p class="price">
@@ -200,7 +200,7 @@
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">Limitless</h4>
                 <p class="description" style="text-align:center">
-                  <i>Di balik sebuah kesuksesan, selalu ada perjuangan dan lika-liku yang tidak ...</i> <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <i>Di balik sebuah kesuksesan, selalu ada perjuangan dan lika-liku yang tidak ...</i> <br><small><a href="books/limitless.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp.80.000,-
@@ -210,10 +210,10 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/littlewoman.png" class="glightbox"><img src="assets/img/menu/littlewoman.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4 style="text-align:center">Little Woman and Good Wives</h4>
+                <h4 style="text-align:center">Little Women and Good Wives</h4>
                 <p class="description" style="text-align:center">
                   <i>Kisah petualangan rumah tangga mereka, upaya mereka untuk meningkatkan ...</i>
-                  <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <br><small><a href="books/littlewoman.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp.80.000,-
@@ -221,7 +221,7 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="books/kata.html" class="glightbox"><img src="assets/img/menu/kata.png"
+                <a href="assets/img/menu/kata.png" class="glightbox"><img src="assets/img/menu/kata.png"
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">Kata</h4>
                 <p class="description" style="text-align:center">
@@ -250,7 +250,7 @@
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">How to Win & Influence People</h4>
                 <p class="description" style="text-align:center">
-                  <i>Anda dapat mengejar pekerjaan yang Anda inginkan dan mendapatkannya!</i> <br><small><a href="#" class="text-muted opacity-50">Lihat
+                  <i>Anda dapat mengejar pekerjaan yang Anda inginkan dan mendapatkannya!</i> <br><small><a href="books/howtowin.html" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
 
                 </p>
@@ -264,8 +264,8 @@
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">Sukarno</h4>
                 <p class="description" style="text-align:center">
-                  <i>Sukarno adalah sebuah buku yang berisi tentang kisah Soekarno, bapak pendiri republik. </i>
-                  <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <i>"Biarpun matahari di tangan kananku dan bulan di tangan kiriku, dengan maksud .. </i>
+                  <br><small><a href="books/sukarno.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp. 90.000,-
@@ -278,7 +278,7 @@
                 <h4 style="text-align:center">Atomic Habits</h4>
                 <p class="description" style="text-align:center">
                   <i>Orang mengira ketika Anda ingin mengubah hidup, Anda perlu memikirkan hal-hal besar. </i>
-                  <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <br><small><a href="books/atomic1.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
                   Rp. 80.000,-
@@ -291,7 +291,7 @@
                 <h4 style="text-align:center">Dear Tomorrow</h4>
                 <p class="description" style="text-align:center">
                   <i>Buku ini adalah kumpulan pengalaman, pemikiran, dan percakapan tentang <a
-                      class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
+                      class="text-muted">...</a></i> <br><small><a href="books/deartomorrow.html" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
 
                 </p>
@@ -306,7 +306,7 @@
                 <h4 style="text-align:center">How to Respect Myself</h4>
                 <p class="description style="text-align:center"">
                   <i>Bagaimana anda menjaga dan mencintai diri sendiri? Metode pelatihan mandiri untuk <a
-                      class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
+                      class="text-muted">...</a></i> <br><small><a href="books/howtorespect.html" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
 
                 </p>
@@ -321,7 +321,7 @@
                 <h4 style="text-align:center">Seni Berbicara yang Baik</h4>
                 <p class="description" style="text-align:center">
                   <i>Tidak ada orang yang tidak bisa diajak bicara bila kita memiliki sifat yang tepat.</i>
-                  <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
+                  <br><small><a href="books/seniberbicara.html" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
 
                 </p>
                 <p class="price">
@@ -348,28 +348,28 @@
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/habisgelap.png"><img src="assets/img/menu/habisgelap.png" class="img-fluid"
+                href="books/howtowin.html"><img src="assets/img/menu/howtowin.png" class="img-fluid"
                   alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
                 href="books/kata.html"><img src="assets/img/menu/kata.png" class="img-fluid" alt=""></a>
             </div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/seniberbicara.png"><img src="assets/img/menu/seniberbicara.png" class="img-fluid"
+                href="books/seniberbicara.html"><img src="assets/img/menu/seniberbicara.png" class="img-fluid"
                   alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/howtorespect.png"><img src="assets/img/menu/howtorespect.png" class="img-fluid"
+                href="books/howtorespect.html"><img src="assets/img/menu/howtorespect.png" class="img-fluid"
                   alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/teluk.png"><img src="assets/img/menu/teluk.png" class="img-fluid" alt=""></a>
+                href="books/littlewoman.html"><img src="assets/img/menu/littlewoman.png" class="img-fluid" alt=""></a>
             </div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/atomic1.png"><img src="assets/img/menu/atomic1.png" class="img-fluid" alt=""></a>
+                href="books/atomic1.html"><img src="assets/img/menu/atomic1.png" class="img-fluid" alt=""></a>
             </div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/limitless.png"><img src="assets/img/menu/limitless.png" class="img-fluid"
+                href="books/limitless.html"><img src="assets/img/menu/limitless.png" class="img-fluid"
                   alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/deartommorow.png"><img src="assets/img/menu/deartommorow.png" class="img-fluid"
+                href="books/deartomorrow.html"><img src="assets/img/menu/deartommorow.png" class="img-fluid"
                   alt=""></a></div>
           </div>
           <div class="swiper-pagination"></div>
