--- a/aboutus.html
+++ b/aboutus.html
@@ -300,7 +300,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testi7.jpg" class="img-fluid testimonial-img" alt="">
+                    <img src="assets/img/testimonials/testi7.png" class="img-fluid testimonial-img" alt="">
                   </div>
                 </div>
               </div>
